# grocery-calculator

./: .gitignore  data-model.md  hours.csv  outline.excalidraw  pyproject.toml  requirements.txt  system-design.md
grocery_calculator/: .gitignore  db.py  env.py  logging.py  mysolve.py  reader.py  solve.py
grocery_calculator/ingest/: __init__.py  copy_data.py  ingest-pipeline.md  ingest_trader_joes.py  llm_tagger.py  preprocess.py  tagging.py  target.py
grocery_calculator/ingest/stores/: target.py  trader_joes.py
grocery_calculator/model/: seed.py
grocery_calculator/sql/: seed.sql
grocery_calculator/sql/ingest/: copy_target.sql  copy_target_2.sql  copy_trader_joes.sql  preprocess_target.sql  test_target.sql
scrape/: README.md  drive-by-scraping.md  oxylabs.md
scrape/traderjoes/: query.graphql  traderjoes.py
tests/: __init__.py  test_db.py  test_env.py  test_mysolve.py  test_reader.py  test_solve.py
tests/fixtures/: hello.sql  multiple_queries.sql  test.env
tests/ingest/: test_target_ingest.py
tests/ingest/stores/: test_target_ingest.py
tests/model/: test_seed.py
