[build-system]
requires = ["setuptools >= 75"]
build-backend = "setuptools.build_meta"

[project]
name = "grocery_calculator"
version = "0.1.dev0"
description = "Build myself a grocery list"
requires-python = ">=3.13"
dependencies = ["duckdb==1.1.*", "pulp==3.0.*"]

[tool.setuptools]
packages = ["grocery_calculator"]

[project.scripts]
copy_data="grocery_calculator.ingest.copy_data:main"
preprocess="grocery_calculator.ingest.preprocess:main" 